Add issue branches to workflow triggers for testing

--- a/.github/workflows/deploy-server.yml
+++ b/.github/workflows/deploy-server.yml
@@ -4,6 +4,7 @@ on:
   push:
     branches:
       - main
+      - 'issue-**'  # Allow testing on issue branches
     paths:
       - 'server/**'
       - 'requirements.txt'
